[gd_scene load_steps=2 format=3 uid="uid://xxtcwl4dtb0y"]

[ext_resource type="Script" uid="uid://dhfi0o7152vxu" path="res://scripts/scenes/components/wire_pair.gd" id="1_351rm"]

[node name="WirePair" type="Node2D"]
script = ExtResource("1_351rm")

[node name="NodeL" type="Node2D" parent="."]

[node name="ColorRect" type="ColorRect" parent="NodeL"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="NodeR" type="Node2D" parent="."]

[node name="ColorRect" type="ColorRect" parent="NodeR"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="ConnectionLine" type="Line2D" parent="."]
